プロジェクト選択画面の背景色を黒に

--- a/mystyle.css
+++ b/mystyle.css
@@ -87,3 +87,7 @@
   border-width: 0 1px 1px 1px !important;
   border-radius: 0 0 5px 5px !important;
 }
+#cs_table th{
+  background-color: #777 !important;
+  color:white !important;
+}
